In terms of the backend of the database and it's structure it could be considered done. In terms of the fetching to get data from the database is not done and will be implemented in sections as I work on the different aspects of the plugin, such as Professions, Augments, and SubProfessions. The current working aspects of the database and plugin, is that the player's associated user in the database is saved and loaded when the user joins for the first time and any subsequent times thereafter. This is soley the User data that is stored in the Users table, as I work with professions in the next branch I will read and write the players specific professions to the database as well as add them to the player via commands.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,7 +3,7 @@
  * The common project outlines all of the common features of both the
  * Spigot version of the plugin and the Sponge version. This will allow
  * for both the spigot and sponge versions to utilize the same API for
- * common resources such as the Database, Exceptions, Containers, the
+ * common resources such as the database, Exceptions, Containers, the
  * abstract professions and classes. This project CAN be built into a Jar
  * and utilized as a dependency, but for the projects I am compiling the
  * source code into the Spigot and Sponge Jars to reduce work of having
