--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '19.0'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.23.1'
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.5'
+    implementation group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
+
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
 }
 
 /**
@@ -49,7 +53,10 @@ sourceSets {
 
     test {
         java {
-            srcDir "src/test"
+            srcDir "src/test/java"
+        }
+        resources {
+            srcDir "src/test/resources"
         }
     }
 }
@@ -85,11 +92,13 @@ task commonClean (type: Delete) {
     description = "Cleans all of the build compilations for the common api"
 }
 
-//def genPath = 'build/gen/src/main/com/creedfreak/common/utility/BuildConfig.java'
-//task placeBuildConfig {
-//    doFirst {
-//        delete 'src/main/java/com/creedfreak/common/utility/BuildConfig.java'
-//    }
-//
-//    copy ''
-//}
+/**
+ * TESTING: The testing framework.
+ */
+test {
+    useJUnitPlatform ()
+
+    testLogging {
+        showStandardStreams = true
+    }
+}
