--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,10 @@ ext {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
+    
+    dependencies {
+        implementation group: 'net.jcip', name: 'jcip-annotations', version: '1.0'   
+    }
 }
 
 allprojects {
