--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -22,24 +22,28 @@ evaluationDependsOn(':common')
 
 /**
  * DEPENDENCIES: The modules that the spigot build requires
+ * 
+ * Note: Fixed the Milkbowl repository issue by implementing 
+ *          the Github repo for the abstraction library. This
+ *          fix is referenced in issue #69 on the Vault Github page.
  */
 dependencies {
     implementation project (':common')
 
-    implementation (
-            [group: 'org.spigotmc', name: 'spigot-api', version: '1.13.2-R0.1-SNAPSHOT'],
-            [group: 'net.milkbowl.vault', name: 'VaultAPI', version: '1.7']
-    )
+    implementation group: 'org.spigotmc', name: 'spigot-api', version: '1.13.2-R0.1-SNAPSHOT'
+    implementation group: 'com.github.Milkbowl', name: 'VaultAPI', version: '68f14eca20'
 }
 
 /**
  * REPOSITORIES: Dependency Repositories
+ * 
+ * Note: Fixed the Milkbowl repository issue by using the repository jitpack.io
  */
 repositories {
     mavenCentral()
     mavenLocal()
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'} 
-    maven { url 'http://nexus.hc.to/content/repositories/pub_releases' } 
+    maven { url 'https://jitpack.io' }
     maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots'}
 }
@@ -155,4 +159,8 @@ task makeSpigot (dependsOn: ['spigotClean', 'spigotJar', 'spigotCopy']) {
  */
 artifacts {
     archives spigotJar
+}
+
+task showMeCache {
+    configurations.compile.each { println it }
 }
