Refactored a lot of the database connection code and comments. This includes implementing a Settings table in the database to check for existence of the database, and house other dabase specific settings. Implemented a Database Connection Pool on the MariaDB/MySQL connection whereas I left the connection for SQLite a single connection as that is what was advised by the research I did. Thus I there should be a speedup while accessing a MariaDB/MySQL databasee over SQLite access.

--- a/spigot/src/main/resources/config.yml
+++ b/spigot/src/main/resources/config.yml
@@ -13,8 +13,11 @@ DatabaseType: SQLite
 # for the MySQL database.
 MySQL:
   # The Hostname of your SQL database
-  # Example: localhost:3306 or 127.0.0.1:3306
-  host: localhost:3306
+  # Example: localhost or 127.0.0.1
+  host: localhost
+
+  # The specified port to by used by SQL
+  port: 3306
 
   # The name of the database to use
   db_name: cp_testing
