Added a database pooled connection on the MySQL end of the project in order to manage the multithreaded environment of the database task-consumer system. As for SQLite we still only have a single connection for now. Some refactoring has happened surrounding the changes to the pool connections such as making sure to close all of the resources I used on the database end in reverse order. There were some connections I was recieving that were getting lost and not closed, this is now fixed.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ subprojects {
 
 allprojects {
     group = 'CraftyProfessions'
+
+    configurations {
+        provided
+        compile.extendsFrom(provided)
+    }
 }
 
 repositories {
