--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,6 +13,7 @@
 plugins {
     id "de.fuerstenau.buildconfig" version "1.1.8"
 }
+
 /**
  * REPOSITORIES: Dependency Repositories
  */
@@ -28,7 +29,8 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation group: 'com.google.guava', name: 'guava', version: '19.0'
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.25.2'
-    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.0'
+
+    provided group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.0'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
